--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -16,14 +16,24 @@
         <h6>Apertura finestra: <span id="windowOpen">--</span>%</h6>
     </div>
 
-    <!-- Grafico della temperatura -->
-    <canvas id="temperatureChart"></canvas>
+
+    <!-- Display the current average, max, and min values -->
+    <div id="stats">
+        <p><strong>Current Average Temperature:</strong> <span id="avg-temp">0</span> °C</p>
+        <p><strong>Current Max Temperature:</strong> <span id="max-temp">0</span> °C</p>
+        <p><strong>Current Min Temperature:</strong> <span id="min-temp">0</span> °C</p>
+    </div>
 
     <!-- Controlli -->
     <div class="mt-3">
-        <button id="manualModeBtn" class="btn btn-primary">Attiva modalità MANUAL</button>
-        <input type="range" id="windowSlider" min="0" max="100" value="0" class="form-range mt-2" disabled>
-        <button id="resetAlarmBtn" class="btn btn-danger mt-2" disabled>Reset ALARM</button>
+        <button id="modeBtn" class="btn btn-primary">Attiva modalità MANUALE</button>
+        <br>
+        <input type="range" id="windowSlider" min="0" max="100" value="0" class="form-range mt-2">
+        <button id="resetAlarmBtn" class="btn btn-danger mt-2 mb-5">Reset ALARM</button>
+    </div>
+     <!-- Container for the temperature chart -->
+     <div id="chart-container" class = "mb-5">
+        <canvas id="temperatureChart"></canvas>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
